# leveled

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  start.bat
chrome_extension/: manifest.json  service_worker.js
config/: settings.py
extras/: Leveled_Start.vbs  Setup_AutoStart.bat  build_exe.bat
services/: __init__.py  server.py
storage/: database.py
ui/: dashboard.html  overlay.py
utils/: migration.py  runtime_log.py
